# country-productizer

./: .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
.github/workflows/: build-and-deploy.yaml
app/: datasource.py  models.py
app/routers/: dataproduct.py
