[tool.poetry]
name = "country-productizer-v1"
version = "1.0.0"
description = ""
authors = ["Digital Living International Ltd"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
aiohttp = "^3.8.1"
invoke = "^1.6.0"
orjson = "^3.6.5"
stringcase = "^1.2.0"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
